[#mhv-46243] fixed z-index bug (#24706)

--- a/src/applications/mhv/medical-records/sass/print-download.scss
+++ b/src/applications/mhv/medical-records/sass/print-download.scss
@@ -87,6 +87,7 @@
   .menu-options-open {
     width: 275px;
     position: absolute;
+    z-index: 99;
     list-style: none;
     display: flex;
   }
